== 0.6

	New features:
	----------------------------	
	
	Enhancements:
	----------------------------

	Bugfixes:
	------------------------
	+ Fixed error with missing custom IP fields when adding new IP address;


== 0.6

	New features:
	----------------------------
	+ Selectable IP address list display fields;
	+ Custom IP address fields;	
	+ Search and replace IP fields function;
	+ Full page width theme;	
	
	Enhancements:
	----------------------------
	+ Independant VLAN management;
	+ Added additional level of subnet nesting;
	+ Added option to clear and export log files;
	+ Export of search results to XLS;
	+ Clickable search results;
	+ Selectable export fields when exporting subnet;
	+ Subnet can be deleted from ip address edit subnet;
	+ IP Requests for locked subnets and viewer users can be placed from ip address list;
	+ jQuery updated to v 1.7.1;
	+ HighCharts updated to v 2.2.0;

	Bugfixes:
	------------------------
	+ Upgrade is supported only for versions 0.4 and higher;
	+ Fixed broken UTF-8 support;
	+ Fixed wrong logging when authenticating via AD;
	+ Fixed issues where external attacker might get information about internal hosts through resolvedns script;
	+ Fixed wrong subnet nesting under administration/manage subnets;
	+ Fixed editing subnet can be outside of its own root subnet;
	+ Fixed errors when adding new switch auto-adds itselt to all hosts without no switch defined;
	+ Fixed removing switch not removed in ip address list;
	+ Vlan1 can now be used;
	+ Fixed mail sending settings with missing information;
	+ Fixed errors on adding switch with no sections;
	+ Fixed version check;
	+ Removed masterSubnets from subnets available for IP requests;
	+ Fixed error when non-admin user could not open dashboard;
	+ Added how subnet list switch when list hidden;

== 0.5

	New features:
	-------------
	+ Importing subnets from RIPE by AS in admin section;
	+ Added switch management and changed switch logic;
	+ Added VRF support;